--- a/projects/storefrontstyles/scss/components/cart/_item-counter.scss
+++ b/projects/storefrontstyles/scss/components/cart/_item-counter.scss
@@ -21,7 +21,7 @@
     input {
       border: none;
       cursor: text;
-      width: 30px;
+      width: 35px;
     }
   }
 
